[package]
name = "macro-derive-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro-derive = { path = "../macro-derive" }
hello-derive-macro = { path = "../macro-derive/hello-derive-macro" }
