[package]
name = "cargo-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# useful for pre-requisites before cargo successfully compiles 
# by default it will look into build.rs
build = "hello.rs"
[dependencies]
